# coriro

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
coriro/: __init__.py
coriro/measure/: __init__.py  accents.py  chroma.py  colorspace.py  consolidation.py  extract.py  palette.py  regions.py  smoother.py  text.py
coriro/runtime/: __init__.py
coriro/runtime/serializers/: __init__.py  base.py  block.py  system.py  tool.py
coriro/schema/: __init__.py  color_measurement.py
tests/: test_chroma.py  test_colorspace.py  test_consolidation.py  test_measure.py  test_optional_passes.py  test_schema.py  test_serializers.py
